// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HybridCard1 should render is-read correctly 1`] = `
<div>
  <article
    class="hybridCard1 isRead"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 1`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 2`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 3`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 4`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 5`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 6`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 7`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 8`] = `
<div>
  <article
    class="hybridCard1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard1 should render variant-1 correctly 1`] = `
<div>
  <article
    class="hybridCard1"
    data-variant="variant-1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure>
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          />
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;
